# u-boot-vendor-khadas-a-b

./: .gitignore  Makefile  check_compile.sh  make.sh
bl30/rtos_sdk/boards/riscv/: .gitignore  CMakeLists.txt  Kconfig  board_version.c  board_version.h  build_combination.in
bl30/rtos_sdk/boards/riscv/am301_t950d4/: FreeRTOSConfig.h  Kconfig  defconfig  fsm.h  hw_business.c  keypad.c  lscript.ld  power.c
bl30/rtos_sdk/boards/riscv/at301_t962d4/: CMakeLists.txt  FreeRTOSConfig.h  Kconfig  defconfig  fsm.c  hw_business.c  keypad.c  leds_plat.h  lscript.ld  power.c
bl30/rtos_sdk/boards/riscv/at309_t962d4/: Kconfig  btwake.c  defconfig  fsm.c  hw_business.c  leds_plat.c  lscript.h  power.c
bl30/rtos_sdk/boards/riscv/av400_a113x2/: FreeRTOSConfig.h  Kconfig  defconfig  hw_business.c  keypad.c  leds_plat.c  power.c
bl30/rtos_sdk/boards/riscv/av409_a113x2/: FreeRTOSConfig.h  Kconfig  defconfig  (+5 more)
bl30/rtos_sdk/drivers_aocpu/: CMakeLists.txt  Kconfig
bl30/rtos_sdk/drivers_aocpu/cec/: CMakeLists.txt  Kconfig  hdmi_cec.c  hdmi_cec.h  hdmi_cec_reg.h
bl30/rtos_sdk/drivers_aocpu/common/: CMakeLists.txt  drv_errno.c  drv_errno.h
bl30/rtos_sdk/drivers_aocpu/ddr/: CMakeLists.txt  Kconfig  ddr.c  ddr.h  ddr_txhd2.c
bl30/rtos_sdk/drivers_aocpu/ethernet/: CMakeLists.txt  Kconfig  eth.c  eth.h
bl30/rtos_sdk/drivers_aocpu/fd650/: CMakeLists.txt  Kconfig  fd650.c  fd650.h
bl30/rtos_sdk/drivers_aocpu/gpio/: CMakeLists.txt  Kconfig  gpio.c  gpio.h  gpio_a4_plat.c  gpio_a5_plat.c  gpio_drv.h  gpio_irq.c  gpio_irq.h  gpio_s1a_plat.c  gpio_s5_plat.c  gpio_s6_plat.c  gpio_s7_plat.c  gpio_s7d_plat.c  gpio_t3x_plat.c  gpio_t5d_plat.c  gpio_t5w_plat.c  gpio_t6d_plat.c  gpio_txhd2_plat.c
bl30/rtos_sdk/drivers_aocpu/hdmirx/: CMakeLists.txt  Kconfig  hdmirx_wake.c  hdmirx_wake.h
bl30/rtos_sdk/drivers_aocpu/hwspinlock/: CMakeLists.txt  Kconfig  hwspinlock.c  hwspinlock.h  hwspinlock_bakery.c  hwspinlock_bakery.h
bl30/rtos_sdk/drivers_aocpu/i2c/: CMakeLists.txt  Kconfig  i2c.c  meson_i2c.h
bl30/rtos_sdk/drivers_aocpu/i2c_slave/: CMakeLists.txt  Kconfig  i2c_slave.c  meson_i2c_slave.h
bl30/rtos_sdk/drivers_aocpu/ir/: CMakeLists.txt  Kconfig  ir.c  ir.h  ir_drv.h  ir_regmap.c
bl30/rtos_sdk/drivers_aocpu/key/: CMakeLists.txt  Kconfig  adc_key.c  dynamic_keypad.c  gpio_key.c  keypad.h
bl30/rtos_sdk/drivers_aocpu/leds/: CMakeLists.txt  Kconfig  leds_state.c  leds_state.h
bl30/rtos_sdk/drivers_aocpu/mailbox/: CMakeLists.txt  Kconfig  mailbox-api.h  mailbox-htbl.c  mailbox-htbl.h  mailbox-in.h  mailbox-irq.c  mailbox-irq.h  mailbox-pl-in.h  mailbox-pl.c  mailbox-rpc-test.c  mailbox-rpc-test.h  mailbox.c  rpc-user.h
bl30/rtos_sdk/drivers_aocpu/pm/: CMakeLists.txt  Kconfig  pm.h  pm_frz.c
bl30/rtos_sdk/drivers_aocpu/pmic/: bd71837.c  bd71837.h  pmic.c  pmic.h
bl30/rtos_sdk/drivers_aocpu/pwm/: CMakeLists.txt  Kconfig  pwm.h  pwm_a5_plat.c  pwm_meson_v2.c  pwm_s1a_plat.c  pwm_s5_plat.c  pwm_s6_plat.c  pwm_s7_plat.c  pwm_s7d_plat.c  pwm_t3x_plat.c  pwm_t5d_plat.c  pwm_t5m_plat.c  pwm_t6d_plat.c  pwm_txhd2_plat.c
bl30/rtos_sdk/drivers_aocpu/rtc/: CMakeLists.txt  Kconfig  rtc.c  rtc.h
bl30/rtos_sdk/drivers_aocpu/saradc/: CMakeLists.txt  Kconfig  saradc.c  saradc.h  saradc_c2.c  saradc_s7.c  saradc_s7d.c
bl30/rtos_sdk/drivers_aocpu/stick_mem/: CMakeLists.txt  Kconfig  stick_mem.c  stick_mem.h
bl30/rtos_sdk/drivers_aocpu/str/: CMakeLists.txt  Kconfig  suspend.c  suspend.h  suspend_debug.h
bl30/rtos_sdk/drivers_aocpu/timer_source/: CMakeLists.txt  Kconfig  timer_source.c  timer_source.h
bl30/rtos_sdk/drivers_aocpu/uart/: CMakeLists.txt  Kconfig  uart.c  uart.h
bl30/rtos_sdk/drivers_aocpu/vrtc/: CMakeLists.txt  Kconfig  vrtc.c  vrtc.h
bl30/rtos_sdk/drivers_aocpu/wifi_bt_wake/: CMakeLists.txt  Kconfig  wifi_bt_wake.c  wifi_bt_wake.h
bl30/rtos_sdk/kernel/freertos/: CMakeLists.txt  Kconfig  croutine.c  tasks.c  timers.c
bl30/rtos_sdk/soc/riscv/: CMakeLists.txt  Kconfig  interrupt.h  interrupt_control_eclic.c  interrupt_control_eclic.h  interrupt_control_pic.c  interrupt_control_pic.h  n200_eclic.h  n200_func.c  n200_func.h  riscv_bits.h  riscv_const.h
(+877 files in other folders)
